image overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,19 @@ body {
   flex-direction: column;
 }
 
+.image-container {
+  width: 50vw;
+  height: 40vh;
+  position: relative;
+}
+
+.image-container .image {
+  width: 100%;
+  height: 100%;
+  position: relative !important;
+  object-fit: center;
+}
+
 /* --------------------------------------- */
 /* nav */
 .navbar-brand {
